syntax = "proto3";
package cross.core;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "tendermint/abci/types.proto";

option go_package = "github.com/datachainlab/cross/x/core/types";
option (gogoproto.goproto_getters_all) = false;

message ContractTransaction {
  option (gogoproto.equal) = false;

  google.protobuf.Any chain_id = 1 [(gogoproto.nullable) = false];
  repeated bytes signers      = 2 [(gogoproto.casttype) = "AccountAddress"];
  bytes call_info = 3 [(gogoproto.casttype) = "ContractCallInfo"];
  StateConstraint state_constraint = 4 [(gogoproto.nullable) = false];
  ReturnValue return_value = 5;
  repeated Link links = 6 [(gogoproto.nullable) = false];
}

message Link {
  uint32 src_index = 1;
}

message StateConstraint {
  uint32 type = 1 [(gogoproto.casttype) = "StateConstraintType"];
  OPs ops = 2;
}

message ReturnValue {
  bytes value = 1;
}

message ContractHandlerResult {
  bytes data = 1;
  repeated tendermint.abci.Event events = 2 [
    (gogoproto.nullable) = false
  ];
}

message OPs {
  option (gogoproto.equal)           = true;

  repeated google.protobuf.Any items = 1 [(gogoproto.nullable) = false];
}

message ChannelInfo {
  string port = 1;
  string channel = 2;
}

message ContractTransactionInfo {
  ContractTransaction tx = 1 [(gogoproto.nullable) = false];
  repeated google.protobuf.Any objects = 2 [(gogoproto.nullable) = false];
}

// ConstantValueObject is an Object wraps a constant value
message ConstantValueObject {
  google.protobuf.Any chain_id = 1 [(gogoproto.nullable) = false];
  bytes k = 2;
  bytes v = 3;
}

message GenesisState {}
